# SansScript-LSP

./: README.md  pyproject.toml
SansScript_LSP/: __init__.py  __main__.py  analyzer.py  parser.py  semantic_tokens.py  server.py  symbols.py
sanslsp/: __main__.py  completion.py  definition.py  hover.py  server.py
vscode-extension/: extension.js  language-configuration.json  package-lock.json  package.json
vscode-extension/syntaxes/: sanscript.tmLanguage.json
